kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cks-terminal-mgmt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cks-terminal-mgmt
  template:
    metadata:
      labels:
        app: cks-terminal-mgmt
    spec:
      securityContext:
        fsGroup: 1001
      containers:
        - name: cks-terminal-mgmt
          image: registry.toolz.fullstack.pw/library/cks-terminal-mgmt:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: ssh-key-setup
              mountPath: /home/appuser/.ssh
              readOnly: false
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
      volumes:
        - name: ssh-key-source
          secret:
            secretName: cluster-secrets
            items:
              - key: SSH_PRIVATE_KEY
                path: id_ed25519
        - name: ssh-key-setup
          emptyDir: {}
